# Taller_UnoED

./: Administrador.cpp  Administrador.h  CMakeLists.txt  Juego.cpp  Juego.h  ListaCircularSoftware.cpp  ListaCircularSoftware.h  ListaCircularUsuarios.cpp  ListaCircularUsuarios.h  Navegador.cpp  Navegador.h  NodoSoftware.cpp  NodoSoftware.h  NodoUsuario.cpp  NodoUsuario.h  NormalUser.cpp  NormalUser.h  Ofimatica.cpp  Ofimatica.h  Produccion.cpp  Produccion.h  README.md  Seguridad.cpp  Seguridad.h  Social.cpp  Social.h  Software.cpp  Software.h  Usuario.cpp  Usuario.h  main.cpp
